--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "axios": "^0.19.2",
     "echarts": "^4.7.0",
+    "element-china-area-data": "^4.1.2",
     "element-ui": "^2.13.1",
     "jquery": "^3.5.1",
     "vue": "^2.5.2",
