--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
     "echarts": "^4.7.0",
     "element-china-area-data": "^4.1.2",
     "element-ui": "^2.13.1",
+    "iview": "^3.5.4",
     "jquery": "^3.5.1",
     "vue": "^2.5.2",
-    "vue-router": "^3.0.1"
+    "vue-router": "^3.0.1",
+    "vuex": "^3.4.0"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
