--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "element-ui": "^2.13.1",
     "iview": "^3.5.4",
     "jquery": "^3.5.1",
+    "sass-loader": "^8.0.2",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
     "vuex": "^3.4.0"
